test/corpus/L1/positive/cascade-keyword-head.st
"---
id: cascade-keyword-head
kind: positive
phase: parse
layer: L1
spec: anexoA:cascade.keyword-head
origin: spec-ANSI
section: cascade.keyword-head
note: cascade whose first message is keyword; second is also keyword
---"
a foo: 1; bar: 2
